# xz2-rs

./: AGENTS.md  Cargo.lock.msrv  Cargo.toml  README.md  patch.diff
.github/workflows/: main.yml  publish.yml  webassembly.yml
benches/: backend_comparison.rs
docs/: performance-workflow.md
examples/: bufread_trailing_probe.rs  qc_probe.rs  standard_files_probe.rs
liblzma-rs/: Cargo.toml
liblzma-rs-sys/: Cargo.toml
liblzma-rs-sys/src/: lib.rs
liblzma-rs/src/: alloc.rs  lib.rs  types.rs
liblzma-rs/src/check/: check.rs  crc32_fast.rs  crc64_fast.rs  mod.rs  sha256.rs
liblzma-rs/src/common/: alone_decoder.rs  alone_encoder.rs  auto_decoder.rs  block_buffer_decoder.rs  block_buffer_encoder.rs  block_decoder.rs  block_encoder.rs  block_header_decoder.rs  block_header_encoder.rs  block_util.rs  common.rs  easy_buffer_encoder.rs  easy_decoder_memusage.rs  easy_encoder.rs  easy_encoder_memusage.rs  easy_preset.rs  file_info.rs  filter_buffer_decoder.rs  filter_buffer_encoder.rs  filter_common.rs  filter_decoder.rs  filter_encoder.rs  filter_flags_decoder.rs  filter_flags_encoder.rs  hardware_cputhreads.rs  hardware_physmem.rs  index.rs  index_decoder.rs  index_encoder.rs  index_hash.rs  lzip_decoder.rs  microlzma_decoder.rs  microlzma_encoder.rs  mod.rs  outqueue.rs  stream_buffer_decoder.rs  stream_buffer_encoder.rs  stream_decoder.rs  stream_decoder_mt.rs  stream_encoder.rs  (+9 more)
liblzma-rs/src/delta/: delta_common.rs  delta_decoder.rs  delta_encoder.rs  mod.rs
liblzma-rs/src/lz/: lz_decoder.rs  lz_encoder.rs  lz_encoder_mf.rs
liblzma-rs/src/lzma/: fastpos_table.rs  lzma2_decoder.rs  lzma2_encoder.rs  lzma_decoder.rs  lzma_encoder.rs  lzma_encoder_optimum_fast.rs  lzma_encoder_optimum_normal.rs  lzma_encoder_presets.rs  mod.rs
liblzma-rs/src/rangecoder/: mod.rs  price_table.rs
liblzma-rs/src/simple/: arm.rs  arm64.rs  armthumb.rs  ia64.rs  mod.rs  powerpc.rs  riscv.rs  simple_coder.rs  simple_decoder.rs  simple_encoder.rs  sparc.rs  x86.rs
liblzma-rs/src/tuklib/: mod.rs  tuklib_cpucores.rs  tuklib_physmem.rs
liblzma-sys/: Cargo.toml
liblzma-sys/src/: bindgen.rs  manual.rs
perf-probe/: Cargo.toml
perf-probe/src/: main.rs
scripts/: compare_all_trimmed.sh  compare_api_workloads.sh  compare_backends.sh  compare_upstream_c_tests.sh  compare_workloads.sh  inspect_codegen.sh  profile_backend.sh  run_root_test_bins.sh  run_upstream_c_tests.sh  run_xz_c_tests_with_liblzma_rs_sys.sh  run_xz_c_tests_with_xz_sys.sh
src/: bufread.rs  lib.rs  read.rs  stream.rs  write.rs
src/write/: auto_finish.rs
systest/: Cargo.toml  build.rs
systest/src/: main.rs
tests/: drop-incomplete.rs  sys_equivalence.rs
xz/: Cargo.toml
xz-core/: Cargo.toml
xz-core/src/: alloc.rs  lib.rs  raw_alloc.rs  types.rs
xz-core/src/alloc/: c.rs  custom.rs  rust.rs  rust_only.rs
xz-core/src/common/: alone_decoder.rs  alone_encoder.rs  auto_decoder.rs  block_decoder.rs  block_encoder.rs  common.rs  file_info.rs  filter_common.rs  filter_decoder.rs  filter_encoder.rs  index.rs  index_decoder.rs  index_encoder.rs  index_hash.rs  lzip_decoder.rs  microlzma_decoder.rs  microlzma_encoder.rs  outqueue.rs  stream_decoder.rs  stream_decoder_mt.rs  stream_encoder.rs  stream_encoder_mt.rs  string_conversion.rs
xz-core/src/delta/: delta_common.rs  delta_decoder.rs
xz-core/src/lz/: lz_decoder.rs  lz_encoder.rs
xz-core/src/lzma/: lzma2_decoder.rs  lzma2_encoder.rs  lzma_decoder.rs  lzma_encoder.rs
xz-core/src/simple/: simple_coder.rs  simple_decoder.rs
xz-sys/: Cargo.toml
xz-sys/src/: c_allocator.rs  lib.rs
xz/src/: alloc.rs  lib.rs  types.rs
xz/src/check/: check.rs  crc32_fast.rs  crc64_fast.rs  sha256.rs
xz/src/common/: alone_decoder.rs  alone_encoder.rs  auto_decoder.rs  block_buffer_decoder.rs  block_buffer_encoder.rs  block_decoder.rs  block_encoder.rs  block_header_decoder.rs  block_header_encoder.rs  block_util.rs  common.rs  common_types.rs  easy_buffer_encoder.rs  easy_decoder_memusage.rs  easy_encoder.rs  easy_encoder_memusage.rs  file_info.rs  filter_buffer_decoder.rs  filter_buffer_encoder.rs  filter_common.rs  filter_decoder.rs  filter_encoder.rs  filter_flags_decoder.rs  hardware_physmem.rs  index.rs  index_decoder.rs  index_encoder.rs  index_hash.rs  lzip_decoder.rs  microlzma_decoder.rs  microlzma_encoder.rs  mod.rs  outqueue.rs  stream_buffer_decoder.rs  stream_buffer_encoder.rs  stream_decoder.rs  stream_decoder_mt.rs  stream_encoder.rs  stream_encoder_mt.rs  stream_flags_common.rs  (+6 more)
xz/src/delta/: delta_common.rs  delta_decoder.rs  delta_encoder.rs
xz/src/lz/: lz_decoder.rs  lz_encoder.rs  lz_encoder_mf.rs  mod.rs
xz/src/lzma/: fastpos_table.rs  lzma2_decoder.rs  lzma2_encoder.rs  lzma_decoder.rs  lzma_encoder.rs  lzma_encoder_optimum_fast.rs  lzma_encoder_optimum_normal.rs  lzma_encoder_presets.rs
xz/src/rangecoder/: price_table.rs
xz/src/simple/: arm.rs  arm64.rs  armthumb.rs  ia64.rs  powerpc.rs  riscv.rs  simple_coder.rs  simple_decoder.rs  simple_encoder.rs  sparc.rs  x86.rs
xz/src/tuklib/: tuklib_physmem.rs
