[package]
name = "liblzma"
version = "0.4.6"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Portable-Network-Archive Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["lzma", "xz", "encoding", "wasm"]
repository = "https://github.com/portable-network-archive/liblzma-rs"
homepage = "https://github.com/portable-network-archive/liblzma-rs"
description = """
Rust bindings to liblzma providing Read/Write streams as well as low-level
in-memory encoding/decoding. forked from xz2.
"""
categories = ["compression", "api-bindings"]
edition = "2021"
rust-version = "1.63"
exclude = [".github/"]

[workspace]
members = ["systest", "xz", "xz-sys", "perf-probe"]

[dependencies]
# Rust backend (default) - pure Rust implementation
liblzma-sys = { package = "xz-sys", path = "xz-sys", optional = true }
# C backend - original liblzma C library via FFI
liblzma-c-sys = { package = "liblzma-sys", path = "liblzma-sys", version = "0.4.5", optional = true, default-features = false }
num_cpus = { version = "1.16.0", optional = true }
criterion = { version = "0.5", features = ["html_reports"], optional = true }

[dev-dependencies]
rand = "=0.8.0"
regex = "=1.9.0"
log = "=0.4.20"

[[bench]]
name = "backend_comparison"
harness = false
required-features = ["bench"]

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
quickcheck = "=1.0.1"

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["rust-backend"]
rust-backend = ["liblzma-sys"]
c-backend = ["liblzma-c-sys/bindgen"]
static = ["liblzma-c-sys?/static"]
parallel = ["liblzma-sys?/parallel", "liblzma-c-sys?/parallel", "num_cpus"]
bindgen = ["liblzma-c-sys?/bindgen"] # ignored for rust-backend
wasm = ["liblzma-sys?/wasm", "liblzma-c-sys?/wasm"]
uncheck_liblzma_version = ["liblzma-c-sys?/uncheck_liblzma_version"] # ignored for rust-backend
bench = ["criterion"]
# These two are for cross-language LTO with the C backend.
# Ignored for rust-backend.
fat-lto = ["liblzma-c-sys?/fat-lto"]
thin-lto = ["liblzma-c-sys?/thin-lto"]

[package.metadata.docs.rs]
features = ["parallel"]
