[package]
name = "liblzma"
version = "0.4.6"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Portable-Network-Archive Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["lzma", "xz", "encoding", "wasm"]
repository = "https://github.com/portable-network-archive/liblzma-rs"
homepage = "https://github.com/portable-network-archive/liblzma-rs"
description = """
Rust bindings to liblzma providing Read/Write streams as well as low-level
in-memory encoding/decoding. forked from xz2.
"""
categories = ["compression", "api-bindings"]
edition = "2021"
rust-version = "1.85"
exclude = [".github/"]

[workspace]
members = ["systest", "xz", "xz-sys", "perf-probe"]

[dependencies]
xz = { path = "xz", optional = true }
xz-sys = { path = "xz-sys", optional = true }
liblzma-sys = { path = "liblzma-sys", version = "0.4.5", optional = true, default-features = false }
num_cpus = { version = "1.16.0", optional = true }
criterion = { version = "0.5", features = ["html_reports"], optional = true }

[dev-dependencies]
rand = "0.8.0"
quickcheck = "=1.0.1"
regex = "=1.9.0"
log = "=0.4.20"

[[bench]]
name = "backend_comparison"
harness = false
required-features = ["bench"]

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
xz-sys = { path = "xz-sys" }
liblzma-sys = { path = "liblzma-sys" }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["xz"]
xz = ["dep:xz"]
xz-sys = ["dep:xz-sys"]
liblzma-sys = ["dep:liblzma-sys"]
static = ["liblzma-sys?/static"]
parallel = ["xz-sys?/parallel", "liblzma-sys?/parallel", "num_cpus"]
bindgen = ["liblzma-sys?/bindgen"] # only affects liblzma-sys
wasm = ["xz-sys?/wasm", "liblzma-sys?/wasm"]
uncheck_liblzma_version = ["liblzma-sys?/uncheck_liblzma_version"] # only affects liblzma-sys
bench = ["criterion"]
# These two are for cross-language LTO with liblzma-sys.
fat-lto = ["liblzma-sys?/fat-lto"]
thin-lto = ["liblzma-sys?/thin-lto"]

[package.metadata.docs.rs]
features = ["parallel"]

[lints.rust]
unsafe_op_in_unsafe_fn = "allow"
