[package]
name = "liblzma-rs-sys"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "liblzma-sys compatible API layer backed by pure Rust liblzma-rs"

[lib]
crate-type = ["rlib", "staticlib"]

[features]
default = ["bindgen"]
# Feature stubs matching liblzma-sys for smooth migration
static = []
parallel = []
bindgen = []
wasm = ["static", "bindgen"]
uncheck_liblzma_version = []
fat-lto = []
thin-lto = []

[dependencies]
liblzma-rs = { path = "../liblzma-rs" }
libc = "0.2"
