[package]
name = "perf-probe"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
c-sys = ["dep:liblzma-c-sys"]
rs-sys = ["dep:xz-sys"]

[dependencies]
liblzma-c-sys = { package = "liblzma-sys", path = "../liblzma-sys", optional = true }
xz-sys = { path = "../xz-sys", optional = true }

