[package]
name = "perf-probe"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
liblzma-sys = ["dep:liblzma-c-sys"]
xz-sys = ["dep:xz"]

[dependencies]
liblzma-c-sys = { package = "liblzma-sys", path = "../liblzma-sys", optional = true }
xz = { path = "../xz", optional = true }
