[package]
name = "perf-probe"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
xz = ["dep:xz"]
xz-sys = ["dep:xz-sys"]
liblzma-sys = ["dep:liblzma-sys"]

[dependencies]
liblzma-sys = { path = "../liblzma-sys", optional = true }
xz = { path = "../xz", optional = true }
xz-sys = { path = "../xz-sys", optional = true }
