[package]
name = "systest"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
build = "build.rs"
edition = "2021"
publish = false

[dependencies]
liblzma-c-sys = { package = "liblzma-sys", path = "../liblzma-sys", optional = true }
liblzma-rs-sys = { path = "../liblzma-rs-sys", optional = true }
libc = "0.2"

[build-dependencies]
ctest2 = "0.4"

[features]
default = ["c-sys"]
c-sys = ["liblzma-c-sys"]
rs-sys = ["liblzma-rs-sys"]
bindgen = ["c-sys", "liblzma-c-sys/bindgen"]
