[package]
name = "systest"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
build = "build.rs"
edition = "2021"
publish = false

[dependencies]
liblzma-sys = { path = "../liblzma-sys", optional = true }
xz-sys = { path = "../xz-sys", optional = true }
libc = "0.2"

[build-dependencies]
ctest2 = "0.4"

[features]
default = ["liblzma-sys"]
liblzma-sys = ["dep:liblzma-sys"]
xz-sys = ["dep:xz-sys"]
bindgen = ["liblzma-sys", "liblzma-sys/bindgen"]
