[package]
name = "xz-core"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Pure Rust implementation of liblzma (transpiled from C via c2rust)"

[features]
default = []
custom_allocator = []

[dependencies]
libc = "0.2"
memchr = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Kernel",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
] }
