[package]
name = "xz"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Pure Rust implementation of liblzma (transpiled from C via c2rust)"

[features]
default = []

[dependencies]
libc = "0.2"
memchr = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Kernel",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
] }
